# Warsztaty-badawcze-2-2025

./: .gitignore  README.md  list_of_topics.md  nickname_creator.py  pyproject.toml
exercise/: week_3.ipynb  week_4.ipynb  week_5.ipynb
lectures/: Contrastive_and_mask.qmd  Exploring_Self-supervised_Learned_Representations.qmd  Interpretable_Representation_Learning.qmd  Introduction.qmd  Self_supervised_Learning.qmd
