[project]
name = "warsztaty-badawcze-2-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy<2.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "transformer-lens>=2.15.0",
    "transformers>=4.49.0",
]
